# gcp-pdf-inverter

./: .gitignore  README.md
backend/: README.md
backend/inversion/: Dockerfile  README.md  pyproject.toml
backend/inversion/inversion/: config.py  main.py  utils.py
backend/inversion/tests/: conftest.py  test_local.py
backend/inversion/tests/data/: test-stage.sh
frontend/: README.md
